--- a/popup/popup.html
+++ b/popup/popup.html
@@ -56,7 +56,7 @@
     </div>
 
 
-    <script src="/background/auth.js"></script>
+    <script src="/popup/auth.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
