--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuickBooks Time Extension</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/tailwind_cdn_v408.js"></script>
 </head>
 <body class="w-96 bg-gray-100 p-4">
 
