--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,10 +10,13 @@
 
     <!-- Login Screen -->
     <div id="login-screen" class="flex flex-col items-center justify-center space-y-4">
-        <h1 class="text-xl font-semibold">QuickBooks Time</h1>
-        <button id="login-button" class="px-4 py-2 bg-blue-600 text-white rounded-md shadow-md hover:bg-blue-700">
-            Log in with QuickBooks
-        </button>
+        <h1 class="text-xl font-semibold">QuickBooks Time Tracker</h1>
+        <div class="w-64 flex flex-col items-center justify-center">
+            <input id="client-secret" type="password" class="w-full border rounded-md p-2 mb-2" placeholder="Enter Secret">
+            <button id="login-button" class="w-full px-4 py-2 bg-blue-600 text-white rounded-md shadow-md hover:bg-blue-700">
+                Proceed to login with QuickBooks Time
+            </button>
+        </div>
     </div>
 
     <!-- Main Content (Hidden Until Logged In) -->
