Add loading message in extnesion during QBT login redirect.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -16,6 +16,9 @@
             <button id="login-button" class="w-full px-4 py-2 bg-blue-600 text-white rounded-md shadow-md hover:bg-blue-700">
                 Proceed to login with QuickBooks Time
             </button>
+            <div id="loading-spinner" class="hidden">
+                <span>Redirecting you to QuickBooks Login...</span> <!-- This can be replaced with a spinner icon -->
+            </div>
         </div>
     </div>
 
