--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,7 +21,7 @@
                     <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                     <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V4a12 12 0 00-12 12h4z"></path>
                 </svg>                
-                <span>Redirecting you to login with QuickBooks...</span> <!-- This can be replaced with a spinner icon -->
+                <span>Redirecting you to login with QuickBooks Time...</span> <!-- This can be replaced with a spinner icon -->
             </div>
         </div>
     </div>
