--- a/popup/popup.html
+++ b/popup/popup.html
@@ -81,6 +81,7 @@
 
 
     <script src="/popup/auth.js"></script>
+    <script src="/popup/user.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
