--- a/popup/popup.html
+++ b/popup/popup.html
@@ -80,8 +80,8 @@
     </div>
 
 
-    <script src="/popup/auth.js"></script>
-    <script src="/popup/user.js"></script>
-    <script src="popup.js"></script>
+    <script type="module" src="/popup/auth.js"></script>
+    <script type="module" src="/popup/user.js"></script>
+    <script type="module" src="popup.js"></script>
 </body>
 </html>
