Create button that fetches all jobcodes from api and makes available in popup.js.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -41,6 +41,11 @@
                 Logout
             </button>
         </div>
+
+        <!-- test button to trigger get jobcodes -->
+        <button id="get-jobcodes" class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">
+            Get Jobcodes
+        </button>
         
         <!-- Tab Navigation -->
         <div class="flex justify-between border-b mb-4">
@@ -82,6 +87,7 @@
 
     <script type="module" src="/popup/auth.js"></script>
     <script type="module" src="/popup/user.js"></script>
+    <script type="module" src="/popup/jobcodes.js"></script>
     <script type="module" src="popup.js"></script>
 </body>
 </html>
