Change naming: all clients to my clients.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -52,7 +52,7 @@
         <!-- Tab Navigation -->
         <div class="flex justify-between border-b mb-4">
             <button class="tab-button px-4 py-2 text-gray-600 hover:text-black active" data-tab="clients-screen">
-                All Clients
+                My Clients
             </button>
             <button class="tab-button px-4 py-2 text-gray-600 hover:text-black" data-tab="settings-screen">
                 Settings
@@ -62,7 +62,7 @@
         <!-- Clients Page -->
         <div id="clients-screen" class="tab-content p-4">
             <div class="flex justify-between items-center mb-4">
-                <h2 class="text-lg font-semibold">All Clients</h2>
+                <h2 class="text-lg font-semibold">My Clients</h2>
                 <div class="flex items-center">
                     <span class="text-sm text-gray-600 mr-2">Show Favorites Only</span>
                     <label class="relative inline-flex items-center cursor-pointer">
@@ -73,7 +73,7 @@
                     </label>
                 </div>
             </div>
-            <div id="all-clients-table"> </div>
+            <div id="my-clients-table"> </div>
         </div>
 
         <!-- Settings Page -->
