Allow light/dark mode toggling.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -78,7 +78,19 @@
 
         <!-- Settings Page -->
         <div id="settings-screen" class="tab-content hidden p-4">
-            <h2 class="text-lg font-semibold mb-2">Settings</h2>
+            <h2 class="text-lg font-semibold mb-4">Settings</h2>
+
+            <!-- Dark Mode Toggle -->
+            <div class="mb-4">
+                <label class="block text-sm font-medium text-gray-700 mb-2">Dark Mode:</label>
+                <label class="relative inline-flex items-center cursor-pointer">
+                    <input type="checkbox" id="dark-mode-toggle" class="sr-only peer">
+                    <div
+                        class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600">
+                    </div>
+                </label>
+            </div>
+
             <label for="color-theme" class="block text-sm font-medium text-gray-700">Theme Color:</label>
             <input type="color" id="color-theme" class="mt-1 w-full border rounded-md p-1">
             <button id="save-settings" class="mt-3 w-full bg-green-600 text-white py-2 rounded-md hover:bg-green-700">
