--- a/popup/popup.html
+++ b/popup/popup.html
@@ -81,8 +81,8 @@
             <h2 class="text-lg font-semibold mb-4">Settings</h2>
 
             <!-- Dark Mode Toggle -->
-            <div class="mb-4">
-                <label class="block text-sm font-medium text-gray-700 mb-2">Dark Mode:</label>
+            <div class="mb-4 flex items-center">
+                <label class="text-sm font-medium mr-3">Dark Mode</label>
                 <label class="relative inline-flex items-center cursor-pointer">
                     <input type="checkbox" id="dark-mode-toggle" class="sr-only peer">
                     <div
@@ -91,7 +91,47 @@
                 </label>
             </div>
 
-            <label for="color-theme" class="block text-sm font-medium text-gray-700">Theme Color:</label>
+            <!-- Alerts Section -->
+            <div class="mb-4">
+                <h3 class="text-lg font-semibold mb-2">Alerts</h3>
+                <h4 class="text-sm font-medium mb-2">Badge Colour</h4>
+
+                <!-- Time and Color Inputs in a Row -->
+                <div class="flex items-end space-x-2">
+                    <!-- Time Input -->
+                    <div class="flex-1">
+                        <label class="block text-xs font-medium mb-1">Time
+                            Remaining:</label>
+                        <div class="flex space-x-2">
+                            <input type="number" id="alert-hours" class="w-20 border rounded-md p-1" placeholder="Hours"
+                                min="0">
+                            <input type="number" id="alert-minutes" class="w-20 border rounded-md p-1"
+                                placeholder="Minutes" min="0" max="59">
+                            <input type="number" id="alert-seconds" class="w-20 border rounded-md p-1"
+                                placeholder="Seconds" min="0" max="59">
+                        </div>
+                    </div>
+
+                    <!-- Color Picker -->
+                    <div class="flex-1">
+                        <label class="block text-xs font-medium mb-1">Colour:</label>
+                        <input type="color" id="alert-color" class="w-full border rounded-md p-1">
+                    </div>
+
+                    <!-- Add Alert Button -->
+                    <button id="add-alert" class="bg-blue-600 text-white px-4 rounded-md hover:bg-blue-700 h-[28px]">
+                        Add new badge alert
+                    </button>
+                </div>
+
+                <!-- Active Alerts List -->
+                <div id="active-alerts" class="mt-4 space-y-2">
+                    <!-- Alerts will be added here dynamically -->
+                </div>
+            </div>
+
+            <label for="color-theme" class="block text-xs font-medium text-gray-700 dark:text-white">Theme
+                Color:</label>
             <input type="color" id="color-theme" class="mt-1 w-full border rounded-md p-1">
             <button id="save-settings" class="mt-3 w-full bg-green-600 text-white py-2 rounded-md hover:bg-green-700">
                 Save Settings
@@ -103,6 +143,7 @@
     <script type="module" src="/popup/auth.js"></script>
     <script type="module" src="/popup/user.js"></script>
     <script type="module" src="/popup/jobcodes.js"></script>
+    <script type="module" src="/popup/alerts.js"></script>
     <script type="module" src="popup.js"></script>
 </body>
 
