--- a/popup/popup.html
+++ b/popup/popup.html
@@ -97,35 +97,42 @@
                 <h4 class="text-sm font-medium mb-2">Badge Colour</h4>
 
                 <!-- Time and Color Inputs in a Row -->
-                <div class="flex items-end space-x-2">
-                    <!-- Time Input -->
-                    <div class="flex-1">
-                        <label class="block text-xs font-medium mb-1">Time
-                            Remaining:</label>
-                        <div class="flex space-x-2">
-                            <input type="number" id="alert-hours" class="w-20 border rounded-md p-1" placeholder="Hours"
-                                min="0">
-                            <input type="number" id="alert-minutes" class="w-20 border rounded-md p-1"
-                                placeholder="Minutes" min="0" max="59">
-                            <input type="number" id="alert-seconds" class="w-20 border rounded-md p-1"
-                                placeholder="Seconds" min="0" max="59">
+                <div class="flex items-center justify-between gap-3 bg-white p-3 rounded-lg shadow-sm"
+                    id="alerts-input-container">
+                    <div class="flex items-center gap-3">
+                        <!-- Time Input -->
+                        <div class="flex gap-2">
+                            <input type="number" id="alert-hours" class="w-16 border rounded-md p-1 text-sm"
+                                placeholder="H" min="0">
+                            <input type="number" id="alert-minutes" class="w-16 border rounded-md p-1 text-sm"
+                                placeholder="M" min="0" max="59">
+                            <input type="number" id="alert-seconds" class="w-16 border rounded-md p-1 text-sm"
+                                placeholder="S" min="0" max="59">
+                        </div>
+
+                        <!-- Color Picker -->
+                        <div class="w-24">
+                            <input type="color" id="alert-color" class="w-full h-8 border rounded-md p-1">
+                        </div>
+
+                        <!-- Overtime Checkbox -->
+                        <div class="flex items-center">
+                            <label class="flex items-center gap-2">
+                                <input type="checkbox" id="overtime-alert" class="form-checkbox h-4 w-4 text-blue-600">
+                                <span class="text-sm text-gray-600" id="overtime-text">Overtime</span>
+                            </label>
                         </div>
                     </div>
 
-                    <!-- Color Picker -->
-                    <div class="flex-1">
-                        <label class="block text-xs font-medium mb-1">Colour:</label>
-                        <input type="color" id="alert-color" class="w-full border rounded-md p-1">
-                    </div>
-
                     <!-- Add Alert Button -->
-                    <button id="add-alert" class="bg-blue-600 text-white px-4 rounded-md hover:bg-blue-700 h-[28px]">
-                        Add new badge alert
+                    <button id="add-alert"
+                        class="bg-blue-600 text-white px-4 py-1 rounded-md hover:bg-blue-700 text-sm">
+                        Add Alert
                     </button>
                 </div>
 
                 <!-- Active Alerts List -->
-                <div id="active-alerts" class="mt-4 space-y-2">
+                <div id="active-alerts" class="mt-3 space-y-2">
                     <!-- Alerts will be added here dynamically -->
                 </div>
             </div>
