Chrome alerts can be added, removed and trigger correctly.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -103,6 +103,7 @@
                         <select id="alert-type" class="border rounded-md p-1 text-sm">
                             <option value="badge">Badge</option>
                             <option value="sound">Sound</option>
+                            <option value="notification">Chrome Notification</option>
                         </select>
 
                         <!-- Color Picker (shown by default) -->
