--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuickBooks Time Extension</title>
-    <script src="/tailwind_cdn_v408.js"></script>
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body class="w-[750px] bg-gray-100">
