--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickBooks Time Extension</title>
+    <title>QT Hourglass</title>
     <link href="styles.css" rel="stylesheet">
 </head>
 
@@ -12,14 +12,46 @@
 
     <!-- Login Screen -->
     <div id="login-screen" class="flex flex-col items-center justify-center space-y-4 p-4">
-        <h1 class="text-xl font-semibold">QuickBooks Time Tracker</h1>
-        <div class="w-64 flex flex-col items-center justify-center">
+        <h1 class="text-xl font-semibold">QT Hourlgass</h1>
+        <div class="w-128 flex flex-col items-center justify-center">
             <input id="client-secret" type="password" class="w-full border rounded-md p-2 mb-2"
                 placeholder="Enter Secret">
             <button id="login-button"
-                class="w-full px-4 py-2 bg-blue-600 text-white rounded-md shadow-md hover:bg-blue-700">
+                class="w-full px-4 py-2 bg-blue-600 text-white rounded-md shadow-md hover:bg-blue-700 mb-12">
                 Proceed to login with QuickBooks Time
             </button>
+
+            <div id="redirect-url-container" class="text-xs text-gray-600">
+                <div class="flex items-center gap-2">
+                    <span class="font-bold">Redirect URL:</span>
+                    <div class="group relative">
+                        <span id="redirect-url" class="text-gray-800 cursor-help"></span>
+                        <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden group-hover:block">
+                            <div class="bg-gray-900 text-white text-xs rounded py-1 px-2 whitespace-nowrap">
+                                Paste this URL into your QuickBooks Time Account as the 'Redirect URL' in API settings
+                                <div
+                                    class="absolute top-full left-1/2 -translate-x-1/2 border-4 border-transparent border-t-gray-900">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button id="copy-url" class="text-blue-600 hover:text-blue-800 group relative">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3" />
+                        </svg>
+                        <div class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 hidden group-hover:block">
+                            <div class="bg-gray-900 text-white text-xs rounded py-1 px-2 whitespace-nowrap">
+                                Copy to clipboard
+                                <div
+                                    class="absolute top-full left-1/2 -translate-x-1/2 border-4 border-transparent border-t-gray-900">
+                                </div>
+                            </div>
+                        </div>
+                    </button>
+                </div>
+            </div>
             <div id="loading-spinner" class="hidden flex flex-col items-center justify-center">
                 <svg class="animate-spin h-12 w-12 text-gray-500 mb-2" xmlns="http://www.w3.org/2000/svg" fill="none"
                     viewBox="0 0 24 24">
