User can switch to/from individual client view.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -108,6 +108,22 @@
             <div id="my-clients-table"> </div>
         </div>
 
+        <!-- Jobcode Detail View -->
+        <div id="jobcode-detail-screen" class="hidden p-4">
+            <div class="mb-4">
+                <button id="back-to-clients" class="text-blue-600 hover:text-blue-800 flex items-center text-sm">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+                    </svg>
+                    Back to My Clients
+                </button>
+            </div>
+            <div class="text-center py-12">
+                <p class="text-gray-500 text-lg">Jobcode detail view placeholder</p>
+            </div>
+        </div>
+
         <!-- Settings Page -->
         <div id="settings-screen" class="tab-content hidden p-4">
             <h2 class="text-lg font-semibold mb-4">Settings</h2>
