Display individual client info table.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -119,8 +119,9 @@
                     Back to My Clients
                 </button>
             </div>
-            <div class="text-center py-12">
-                <p class="text-gray-500 text-lg">Jobcode detail view placeholder</p>
+            <!-- Timesheets Table Container -->
+            <div id="timesheets-container">
+                <!-- Table will be rendered here dynamically -->
             </div>
         </div>
 
