Proof of concept - user presses button to play sound.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -232,6 +232,10 @@
                                 disabled>
                                 Upload File
                             </button>
+                            <button id="test-custom-sound" 
+                                class="px-4 py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 text-sm transition-colors">
+                                Test Custom Sound
+                            </button>
                         </div>
                         <div id="selected-file-info" class="mt-2 text-xs text-gray-600 dark:text-gray-400 hidden">
                             <!-- Selected file info will appear here -->
