--- a/offscreen.html
+++ b/offscreen.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <script src="offscreen.js"></script>
+    <script type="module" src="offscreen.js"></script>
 </body>
 
 </html>
