--- a/popup/popup.html
+++ b/popup/popup.html
@@ -214,8 +214,9 @@
             <!-- Custom Sounds Section -->
             <div class="mb-4">
                 <h3 class="text-lg font-semibold mb-2">Custom Sounds</h3>
-                <div class="bg-white dark:bg-gray-700 p-4 rounded-lg shadow-sm border border-gray-200 dark:border-gray-600">
-                    
+                <div
+                    class="bg-white dark:bg-gray-700 p-4 rounded-lg shadow-sm border border-gray-200 dark:border-gray-600">
+
                     <!-- Upload Section -->
                     <div class="mb-4">
                         <div class="flex items-center justify-between mb-2">
@@ -223,18 +224,14 @@
                             <div id="upload-status" class="text-xs text-gray-500 hidden"></div>
                         </div>
                         <div class="flex gap-3">
-                            <button id="select-audio-file" 
+                            <button id="select-audio-file"
                                 class="px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 text-sm transition-colors">
                                 Select MP3 File
                             </button>
-                            <button id="upload-audio-file" 
-                                class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 text-sm transition-colors disabled:bg-gray-400 disabled:cursor-not-allowed" 
+                            <button id="upload-audio-file"
+                                class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 text-sm transition-colors disabled:bg-gray-400 disabled:cursor-not-allowed"
                                 disabled>
                                 Upload File
-                            </button>
-                            <button id="test-custom-sound" 
-                                class="px-4 py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 text-sm transition-colors">
-                                Test Custom Sound
                             </button>
                         </div>
                         <div id="selected-file-info" class="mt-2 text-xs text-gray-600 dark:text-gray-400 hidden">
