--- a/popup/popup.html
+++ b/popup/popup.html
@@ -206,7 +206,7 @@
                             </div>
 
                             <!-- Time Input Hours Decimal Format -->
-                            <div class="flex gap-2 hidden" data-time-format-hours-decimal>
+                            <div class="hidden flex gap-2" data-time-format-hours-decimal>
                                 <input type="number" id="alert-hours-decimal"
                                     class="w-20 border border-gray-300 dark:border-gray-600 rounded-md p-1 text-sm bg-white dark:bg-gray-800 text-gray-900 dark:text-white placeholder-gray-500 dark:placeholder-gray-400"
                                     placeholder="2.5" min="0" step="0.01">
