--- a/popup/popup.html
+++ b/popup/popup.html
@@ -167,7 +167,7 @@
 
             <!-- Alerts Section -->
             <div class="mb-4">
-                <h3 class="text-lg font-semibold mb-2">Alerts</h3>
+                <h3 class="text-lg font-semibold mb-2">Time-remaining Alerts</h3>
 
                 <!-- Time and Color Inputs in a Row -->
                 <div class="flex items-center justify-between gap-3 bg-white dark:bg-gray-700 p-3 rounded-lg shadow-sm border border-gray-200 dark:border-gray-600"
