--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,7 +12,7 @@
 
     <!-- Login Screen -->
     <div id="login-screen" class="flex flex-col items-center justify-center space-y-4 p-4">
-        <h1 class="text-xl font-semibold">QT Hourlgass</h1>
+        <h1 class="text-xl font-semibold">QT Hourglass</h1>
         <div class="w-128 flex flex-col items-center justify-center">
             <input id="client-secret" type="password" class="w-full border rounded-md p-2 mb-2"
                 placeholder="Enter Secret">
