--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,8 +14,9 @@
     <div id="login-screen" class="flex flex-col items-center justify-center space-y-4 p-4">
         <h1 class="text-xl font-semibold">QT Hourglass</h1>
         <div class="w-128 flex flex-col items-center justify-center">
+            <input id="client-id" type="text" class="w-full border rounded-md p-2 mb-2" placeholder="Enter Client ID">
             <input id="client-secret" type="password" class="w-full border rounded-md p-2 mb-2"
-                placeholder="Enter Secret">
+                placeholder="Enter Client Secret">
             <button id="login-button"
                 class="w-full px-4 py-2 bg-blue-600 text-white rounded-md shadow-md hover:bg-blue-700 mb-12">
                 Proceed to login with QuickBooks Time
